# Senior-AI-Engineer-Test

./: .coveragerc  .flake8  .gitignore  .pylintrc  Dockerfile  PLAN.md  README.md  REPORT.md  dino_fix.sh  get_weights.py  main.py  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
experiments/: calibrate_video.py  dino.py  dino_zero_shot_detection.py  grounded_sam.py  manual_calibration.py  manual_hsv_tuner.py  process_folder.py  process_video.py
src/lab_monitor/: cv_functions.py  dino_functions.py  event_tracker.py  functions.py  pipeline.py
tests/: test_cv_functions.py  test_dino_functions.py  test_dummy.py  test_event_tracker.py  test_pipeline.py
